# test-task-backend-1

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: health.py  pull_requests.py  teams.py  top.py  users.py
app/common/errors/: base.py
app/core/: config.py  logging.py  middleware.py
app/db/: tortoise.py
app/models/: __init__.py  base.py  pull_request_reviewers.py  pull_requests.py  team_members.py  teams.py  users.py
app/services/pull_request_reviewers/: pull_request_reviewers_service.py
app/services/pull_requests/: errors.py  pull_requests_service.py  schemas.py
app/services/team_members/: errors.py  team_members_service.py
app/services/teams/: errors.py  schemas.py  teams_service.py
app/services/users/: errors.py  schemas.py  users_service.py
infra/sql/: 001_init.sql
tests/: conftest.py  load_test.py  locustfile.py  test_api.py  test_health.py  test_pull_requests_api.py  test_teams_api.py  test_users_api.py
