[project]
name = "project"
version = "0.1.0"
description = "Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic-settings>=2.12.0",
    "tortoise-orm[asyncpg]>=0.25.1",
    "uvicorn[standard]>=0.38.0",
]

[tool.setuptools]
packages = { find = { include = ["app*"] } }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "locust>=2.42.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
